test/error/CMakeFiles/error_no_default_device.dir/depend.make
# Empty dependencies file for error_no_default_device.
# This may be replaced when dependencies are built.
